--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "zKillboard Overlay",
-  "description": "A zKillboard Overlay designed for Wormhole intel",
+  "description": "A zKillboard Overlay designed for Wormhole intel.",
   "version": "1.0",
   "manifest_version": 3,
   "author": "raph_5#0989",
